# n-adj-compat

./: .gitignore  Cargo.toml  graph.pb  make_graph.py  make_graph_ffnn.py  make_graph_fulllex.py  make_graph_matrices.py  model.pb  run  settings.json  train_embeddings.py  writeup.tex
src/: main.rs
src/compat/: main.rs
src/embed/: main.rs
src/prep/: .main.rs.rustfmt  main.rs
src/test/: main.rs
src/test-gen/: main.rs
writeup/: bibliography.bib  compile  writeup-blx.bib  writeup.aux  writeup.bbl  writeup.blg  writeup.out  writeup.run.xml  writeup.tex  writeup.toc
