[package]
name = "n-adj-compat"
version = "0.1.0"
authors = ["Peter Schoener <peter.c.schoener@gmail.com>"]

[dependencies]
tensorflow = "0.8.0"
rand = "0.3.0"
rust2vec = "0.3"
simd = "0.2"
itertools = "0.7.8"
bloom = "0.3.2"
serde_json = "1.0"
console = "0.6.1"

[[bin]]
name = "compat"
path = "src/compat/main.rs"

[[bin]]
name = "prep"
path = "src/prep/main.rs"

[[bin]]
name = "embed"
path = "src/embed/main.rs"

[[bin]]
name = "test-gen"
path = "src/test-gen/main.rs"

[[bin]]
name = "test"
path = "src/test/main.rs"

